# drf-nested-browsable

./: .gitignore  README.md  mypy.ini  pyproject.toml
drf_nested_browsable/: __init__.py  serializers.py
drf_nested_browsable/templates/: writable_list.html
drf_nested_browsable/templatetags/: drf_nested_browsable.py
example/: manage.py
example/drf_nested_browsable_example/: asgi.py  settings.py  urls.py  wsgi.py
example/drf_nested_browsable_example/nested_browsable/: apps.py  models.py  serializers.py  views.py
example/drf_nested_browsable_example/nested_browsable/migrations/: 0001_initial.py  0002_rename_parent_innermodel_inner_parent_and_more.py  0003_otherinnermodel.py  0004_recursivemodel.py
